feat: Add TestContainer w/ Microcks & fix OPenAPI
